--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_dexchange_sms
 description: Flutter package for dexchange sms
+homepage: https://github.com/aliounekanoute/flutter_dexchange_sms
 version: 0.0.1
-homepage:
 
 environment:
   sdk: '>=2.18.6 <3.0.0'
